--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Belajar GIT</title>
 </head>
 <body>
+    <header>Disini Header</header>
+
     <H1>PT Maju Sejahtera</H1>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ab quidem animi expedita, fugit iure. Unde, nobis in consequatur numquam, tempora eos recusandae quidem nesciunt iste ducimus molestiae molestias illo!</div>
+        
+    <footer>disini adalahh footer </footer>
 </body>
 </html>
